can filter butterflies by type in sidebar

--- a/client_identifly/src/App.css
+++ b/client_identifly/src/App.css
@@ -8,6 +8,14 @@
   font-family: 'Rock Salt', cursive;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
+.back-hover:hover {
+  background-color: rgb(238, 238, 238);
+}
+
 /* .sidebar-text {
   font-family: 'Shadows Into Light', cursive;
 } */
