--- a/client_identifly/src/App.css
+++ b/client_identifly/src/App.css
@@ -1,7 +1,9 @@
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
+  margin: 0; 
+  /* font-family: 'Caveat', cursive;
+  font-family: 'Shadows Into Light', cursive; */
 }
 
 .title {
@@ -15,8 +17,3 @@
 .back-hover:hover {
   background-color: rgb(238, 238, 238);
 }
-
-/* .sidebar-text {
-  font-family: 'Shadows Into Light', cursive;
-} */
-/* font-family: 'Caveat', cursive; */
